TestSuite/errors/err0404.pas
type TClass = partial class
  constructor := exit;

end;
TClass = partial class
    constructor := exit;
end;

begin
  
end.